--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="seoil.capstone.som_pos">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".GlobalApplication"
         android:allowBackup="true"
@@ -10,8 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_main_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SOMPOS"
-        >
+        android:theme="@style/Theme.SOMPOS">
+        <activity android:name=".ui.payment.PaymentActivity"></activity>
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,10 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.MainActivity">
-        </activity>
-        <activity android:name=".ui.menu.MenuManagementActivity"/>
-        <activity android:name=".ui.sell.SellManagementActivity"/>
+        <activity android:name=".main.MainActivity"></activity>
+        <activity android:name=".ui.menu.MenuManagementActivity" />
+        <activity android:name=".ui.sell.SellManagementActivity" />
     </application>
 
 </manifest>
